# TradingAgents

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  overview.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data-engineer.md  graph-engineer.md  infra-engineer.md  release-manager.md  test-runner.md  ui-engineer.md
.claude/hooks/: lint-changed.sh
.claude/skills/add-analyst/: SKILL.md
.claude/skills/add-llm-provider/: SKILL.md
.claude/skills/incident/: SKILL.md
.claude/skills/release/: SKILL.md
.github/scripts/: ai_code_review.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy.yml  terraform-drift.yml  terraform.yml
api/: CLAUDE.md  Dockerfile  main.py
cli/: main.py  utils.py
docs/: CLAUDE_CONFIG_PLAN.md  IMPROVEMENT_PLAN.md  INCIDENTS.md  OVERVIEW.md  ui-samples.html
scripts/: bootstrap.sh  smoke_structured_output.py
terraform/: CLAUDE.md  apis.tf  build.tf  iam.tf  main.tf  outputs.tf  registry.tf  run.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  workload_identity.tf
tests/: CLAUDE.md  test_analyst_execution.py  test_anthropic_effort.py  test_api_endpoints.py  test_api_key_env.py  test_capabilities.py  test_checkpoint_resume.py  test_crypto_asset_mode.py  test_dataflows.py  test_deepseek_reasoning.py  test_e2e_smoke.py  test_env_overrides.py  test_google_api_key.py  test_graph_routing.py  test_graph_smoke.py  test_llm_factory.py  test_memory_log.py  test_minimax.py  test_ollama_base_url.py  test_signal_processing.py  test_structured_agents.py
tradingagents/: CLAUDE.md  default_config.py
tradingagents/agents/: schemas.py
tradingagents/agents/analysts/: market_analyst.py  news_analyst.py  sentiment_analyst.py
tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  memory.py  news_data_tools.py  rating.py  structured.py
tradingagents/dataflows/: CLAUDE.md  alpha_vantage.py  interface.py  reddit.py  stockstats_utils.py  stocktwits.py  utils.py  yfinance_news.py
tradingagents/graph/: analyst_execution.py  propagation.py  setup.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  api_key_env.py  azure_client.py  capabilities.py  factory.py  model_catalog.py  openai_client.py
ui/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: Layout.tsx
ui/src/pages/: HistoryPage.tsx  NewRunPage.tsx  RunPage.tsx  WatchlistsPage.tsx
