[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
dev = [
    "httpx>=0.27",       # FastAPI TestClient
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "bandit[toml]>=1.8",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "smoke: quick sanity-check tests",
    "regression: API surface and pipeline regression tests (no live LLM calls)",
    "integration: tests requiring live external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Conservative baseline: pyflakes + critical pycodestyle + import sorting.
# Expand deliberately as the team tightens standards.
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "E401",  # multiple imports on one line — handled case by case
    "E402",  # module level import not at top — logger/config patterns are intentional
    "E741",  # ambiguous variable name (common in financial code: l, O, I)
    "F403",  # star imports — intentional in agents/__init__.py and cli/utils.py
    "F405",  # may be from star import — consequence of F403 above
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "ui", ".github"]
skips = [
    "B101",  # assert_used — pytest relies on assert
    "B603",  # subprocess_without_shell_equals_true — used in review script intentionally
    "B404",  # import_subprocess — needed in review script
]
